crates/rome_cli/tests/snapshots/main_commands_migrate/emit_diagnostic_for_rome_json.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{ "linter": { "enabled": true } }
```

# Emitted Messages

```block
rome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
  - rome.json
  + biome.json
  

```

```block
Run the command biome migrate --write to apply the changes.
```


