crates/rome_cli/tests/snapshots/main_commands_migrate/should_create_biome_json_file.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{ "linter": { "enabled": true } }
```

## `rome.json`

```json
{ "linter": { "enabled": true } }
```

# Emitted Messages

```block
The configuration rome.json has been successfully migrated.
```


